# too-heated-rs

./: Cargo.toml  README.md
db/: data.csv  schema.sql  todos.db  updated_database.db
src/: main.rs
