[package]
name = "toxicity-dataset"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
structopt = "0.3.26"
